--- a/templates/scene-detail-profile.html
+++ b/templates/scene-detail-profile.html
@@ -76,7 +76,7 @@
 
     <div class="button-bar">
       <button class="button button-light" ng-click="addIntoWishlist()">加入心愿单</button>
-      <button class="button button-light" >加入足迹</button>
+      <button class="button button-light" ng-click="addIntoCome()" >加入足迹</button>
 
       <button class="button button-light" >报错</button>
     </div>
