--- a/templates/scene-go-evaluate.html
+++ b/templates/scene-go-evaluate.html
@@ -10,15 +10,29 @@
 
   <ion-content overflow-scroll="true" style="overflow: hidden" >
 
-    <div id="main-screen" width="100%" height="100%">
-      <img src="img/fakemap.png" width="100%" height="500dp">
+    <div id="main-screen" style="overflow: visible;height: 100%;width: 100%" >
+      <div id="goevaluatemap" style="overflow: visible;height: 100%;width:100%"></div>
     </div>
-    <div style="width:100%; height: 10%;background-color:#ffffff;position: absolute;bottom: 0 " >
-      <div ng-repeat="acType in activityTypes" style="display: inline">
-        <span  class="ion-ios-color-filter" on-drag="dragAType(acType.id)" on-release="releaseAType(acType.id)">{{acType.name}}</span>
-        <!--<button ng-repeat="acType in activityTypes" class=" button  button-icon icon ion-ios-color-filter" on-drag="dragAType(acType.id)" on-release="releaseAType(acType.id)">{{acType.name}}</button>-->
+    <!--<div style="width:100%; height: 10%;background-color:#ffffff;position: absolute;bottom: 0 " >-->
+      <!--<div ng-repeat="acType in activityTypes" style="display: inline">-->
+        <!--<span  class="ion-ios-color-filter" on-drag="dragAType(acType.id)" on-release="releaseAType(acType.id)">{{acType.name}}</span>-->
+        <!--&lt;!&ndash;<button ng-repeat="acType in activityTypes" class=" button  button-icon icon ion-ios-color-filter" on-drag="dragAType(acType.id)" on-release="releaseAType(acType.id)">{{acType.name}}</button>&ndash;&gt;-->
+      <!--</div>-->
+    <!--</div>-->
+
+
+    <div class="card"  style="margin:0;width:100%; height: 30%;background-color:#ffffff;position: absolute;bottom: 0 " >
+      <div style="margin: 10px">
+        <div ng-repeat="acType in activityTypes" style="display: inline">
+          <button class="ion-ios-color-filter" on-drag="dragAType(acType.id)" on-release="releaseAType(acType.id)">{{acType.name}}</button>
+          <!--<button ng-repeat="acType in activityTypes" class=" button  button-icon icon ion-ios-color-filter" on-drag="dragAType(acType.id)" on-release="releaseAType(acType.id)">{{acType.name}}</button>-->
+        </div>
+
       </div>
+
     </div>
+
+
 
   </ion-content>
 
@@ -31,7 +45,7 @@
     <ion-scroll zooming="true" direction="y" locking="true" style="width: 1000px; height: 1000px">
       <button class="button button-light" ng-click="activityTypeClick()" >活动类型</button>
       <button class="button button-light" ng-click="placeTypeClick()">场所类型</button>
-      <button class="button button-light">建议</button>
+      <button class="button button-light" ng-click="giveSuggestionClick()">建议</button>
 
       </ion-scroll>
 
