--- a/templates/main-map.html
+++ b/templates/main-map.html
@@ -7,13 +7,66 @@
   </ion-header-bar>
 
 
-  <ion-content >
+  <ion-content overflow-scroll="true" style="overflow: hidden">
+    <!--<div class="bar bar-header item-input-inset">-->
+      <!--<label class="item-input-wrapper">-->
+        <!--<i class="icon ion-ios-search placeholder-icon"></i>-->
+        <!--<input type="search" placeholder="Search">-->
+      <!--</label>-->
+      <!--<button class="button button-clear">-->
+        <!--Cancel-->
+      <!--</button>-->
+    <!--</div>-->
 
-    <div id="main-screen" width="100%" height="100%">
-      <img src="img/fakemap.png" width="100%" height="500dp">
+    <!--<div class="list list-inset">-->
+      <!--<label class="item item-input">-->
+        <!--<i class="icon ion-search placeholder-icon"></i>-->
+        <!--<input type="text" placeholder="Search">-->
+      <!--</label>-->
+    <!--</div>-->
+
+    <div class="list">
+
+      <div class="item item-input-inset">
+        <label class="item-input-wrapper">
+          <input type="text" placeholder="Email" ng-model="searchInput">
+        </label>
+        <button class="button button-small" ng-click="search()">
+          Submit
+        </button>
+      </div>
+
     </div>
 
+    <ion-list width="30dp" style="position: absolute;right: 0">
+
+
+      <ion-checkbox ng-repeat="item in checkTypeList"  ng-model="item.checked" style="padding:4px;padding-left: 60px;">{{item.name}}</ion-checkbox>
+      <!--<ion-checkbox ng-model="checkType.industry"style="padding:4px;padding-left: 60px;">上海工业遗址</ion-checkbox>-->
+      <!--<ion-checkbox ng-model="filter.pink"style="padding:4px;padding-left: 60px;">Pink</ion-checkbox>-->
+
+    </ion-list>
+    <div>
+      <span>{{checkTypeList[0].checked}} {{checkTypeList[1].checked}} {{checkTypeList[2].checked}}</span>
+    </div>
+
+    <div id="main-screen" style="overflow: visible;height: 100%;width: 100%" >
+      <!--img src="img/fakemap.png" width="100%" height="500dp"-->
+      <div id="allmap" style="overflow: visible;height: 100%;width:100%"></div>
+    </div>
+
+    <!--<div id="main-screen" style="overflow: visible;height: 500pt;width: 500pt" >-->
+      <!--&lt;!&ndash;img src="img/fakemap.png" width="100%" height="500dp"&ndash;&gt;-->
+      <!--<div id="allmap" style="overflow: visible;height: 500pt;width: 500pt"></div>-->
+    <!--</div>-->
+
+
   </ion-content>
+
+
+  <!--<div id="main-screen" width="100%" height="100%">-->
+  <!--<img src="img/fakemap.png" width="100%" height="500dp">-->
+  <!--</div>-->
 
 
 
