--- a/templates/scene-go-evaluate.html
+++ b/templates/scene-go-evaluate.html
@@ -9,10 +9,16 @@
 
 
   <ion-content overflow-scroll="true" style="overflow: hidden" >
-
+    <!--<div>-->
+      <!--<span>jjjjjjj</span>-->
+    <!--</div>-->
     <div id="main-screen" style="overflow: visible;height: 100%;width: 100%" >
       <div id="goevaluatemap" style="overflow: visible;height: 100%;width:100%"></div>
+      <div class="ion-ios-heart button-light button-outline button-small" style="position: absolute;top: 140px;left: 200px;color: #009689"><button>10</button></div>
+
     </div>
+
+
     <!--<div style="width:100%; height: 10%;background-color:#ffffff;position: absolute;bottom: 0 " >-->
       <!--<div ng-repeat="acType in activityTypes" style="display: inline">-->
         <!--<span  class="ion-ios-color-filter" on-drag="dragAType(acType.id)" on-release="releaseAType(acType.id)">{{acType.name}}</span>-->
